enhance CORS configuration: restrict allowed origins to specific domains for improved security